# status418

./: .gitignore  README.md  selfsigned.crt
Frontend/SmartNote/: ContentView.swift  ImageView.swift
Frontend/SmartNote.xcworkspace/xcuserdata/timstauder.xcuserdatad/: UserInterfaceState.xcuserstate
SmartNote/: ContentView.swift  ImageView.swift
SmartNote.xcodeproj/project.xcworkspace/xcuserdata/timstauder.xcuserdatad/: UserInterfaceState.xcuserstate
SmartNote.xcworkspace/xcuserdata/timstauder.xcuserdatad/: UserInterfaceState.xcuserstate
backend/: README.md  app.py  prompt_scratchwork.txt  pyproject.toml
backend/backend/: __init__.py  get_news.py  views.py
backend/backend/extractor/: __init__.py  extractor.py
backend/backend/services/: __init__.py  news.py
backend/extractor/: __init__.py  extractor.py
frontend/: Podfile
frontend/SmartNote/: AudioAccess.swift  ContentView.swift  EventAccess.swift  ExtractVideo.swift  HealthAccess.swift  HealthKit.entitlements  ImageExtraction.swift  Info.plist  Keywords.swift  KeywordsStore.swift  SmartNoteARView .swift  SmartNoteARView.swift  SmartNoteApp.swift
frontend/SmartNote.xcodeproj/: project.pbxproj
frontend/SmartNote.xcodeproj/xcshareddata/xcschemes/: SmartNote.xcscheme
frontend/SmartNote.xcworkspace/xcshareddata/swiftpm/: Package.resolved
frontend/SmartNote/Assets.xcassets/amongus.imageset/: Contents.json
frontend/SmartNote/Assets.xcassets/petergriffin.imageset/: Contents.json
