[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tvday <55814534+tvday@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
gunicorn = "^20.1.0"
keybert = "^0.7.0"
python-dateutil = "^2.8.2"
datefinder = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
