[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tvday <55814534+tvday@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
gunicorn = "^20.1.0"
openai = "^0.27.4"
beautifulsoup4 = "4.9.1"
dateparser = "0.7.6"
requests = "2.24.0"
feedparser = "6.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
